Disable the jdbc idle status

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,9 +7,9 @@ jdbc.username=admin
 jdbc.password=root0
 jdbc.initialsize=10
 jdbc.maxactive=40
-jdbc.maxidle=5
-jdbc.minidle=2
-jdbc.minEvictableIdleTimeMillis=6000
+# jdbc.maxidle=5
+# jdbc.minidle=2
+# jdbc.minEvictableIdleTimeMillis=6000
 jdbc.timeBetweenEvictionRunsMillis=3000
 jdbc.maxopensql=99999999 
 jdbc.wait=10
