--- a/src/main/resources/iso.properties
+++ b/src/main/resources/iso.properties
@@ -20,9 +20,9 @@ jdbc.password=mfsDBp@ssw0rd
 #jdbc.password=password
 jdbc.initialsize=10
 jdbc.maxactive=40
-jdbc.maxidle=5
-jdbc.minidle=2
-jdbc.minEvictableIdleTimeMillis=6000
+# jdbc.maxidle=5
+# jdbc.minidle=2
+# jdbc.minEvictableIdleTimeMillis=6000
 jdbc.timeBetweenEvictionRunsMillis=3000
 jdbc.maxopensql=99999999
 jdbc.wait=10
