--- a/src/main/resources/api.properties
+++ b/src/main/resources/api.properties
@@ -9,7 +9,13 @@
 soteria.auth.signin.username = "webtool"
 soteria.auth.signin.password = "NtmdQ1KYyxvWfjIg6vgdzA=="
 
-soteria.auth.signin = "https://dev-api-janus.fortress-asya.com:8083/api/auth/signin"
-soteria.auth.inquire = "https://dev-api-janus.fortress-asya.com:8083/api/auth/inquire"
-soteria.auth.addAccount = "https://dev-api-janus.fortress-asya.com:8083/api/auth/addAccount"
-soteria.webtool.updateDevice =  "https://dev-api-janus.fortress-asya.com:8083/api/webtool/updateDevice"
+# soteria.auth.signin = "https://dev-api-janus.fortress-asya.com:8083/api/auth/signin"
+# soteria.auth.inquire = "https://dev-api-janus.fortress-asya.com:8083/api/auth/inquire"
+# soteria.auth.addAccount = "https://dev-api-janus.fortress-asya.com:8083/api/auth/addAccount"
+# soteria.webtool.updateDevice =  "https://dev-api-janus.fortress-asya.com:8083/api/webtool/updateDevice"
+
+# CHANGE PORT
+soteria.auth.signin = "https://dev-api-janus.fortress-asya.com:18005/api/auth/signin"
+soteria.auth.inquire = "https://dev-api-janus.fortress-asya.com:18005/api/auth/inquire"
+soteria.auth.addAccount = "https://dev-api-janus.fortress-asya.com:18005/api/auth/addAccount"
+soteria.webtool.updateDevice =  "https://dev-api-janus.fortress-asya.com:18005/api/webtool/updateDevice"
