--- a/src/main/resources/iso.properties
+++ b/src/main/resources/iso.properties
@@ -12,12 +12,12 @@ iso.app.type=WEB
 # # Setting for database
 # ########################
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://10.100.28.36/mfsdb_prodtest
-jdbc.username=postgres
-jdbc.password=mfsDBp@ssw0rd
-#jdbc.url=jdbc:postgresql://localhost:5432/MFSDB
-#jdbc.username=admin
-#jdbc.password=password
+# jdbc.url=jdbc:postgresql://10.100.28.36/mfsdb_prodtest
+# jdbc.username=postgres
+# jdbc.password=mfsDBp@ssw0rd
+jdbc.url=jdbc:postgresql://localhost:5432/MFSDB
+jdbc.username=admin
+jdbc.password=password
 jdbc.initialsize=10
 jdbc.maxactive=40
 jdbc.maxidle=5
